# GenUtils

./: CMakeLists.txt  Doxyfile  LICENSE
src/: .clang-format  CMakeLists.txt
src/include/GenUtils/: BinaryTree.h  CDLL.h  CSLL.h  Stack.h  Utils.h  types.h
src/include/Utils/: CDLL.h  CSLL.h  Stack.h  Utils.h  Utils_CDLL.h  Utils_CSLL.h  types.h
src/lib/: CMakeLists.txt
src/lib/GenUtils/: BinaryTree.c  CDLL.c  CSLL.c  Stack.c
src/lib/Utils/: CDLL.c  CSLL.c  Stack.c  Utils_CDLL.c  Utils_CSLL.c
src/tests/: CDLL.c  CMakeLists.txt  CSLL.c
